src/composer/tests/snapshots/seele__composer__execute__tests__execute_submission@submission_nested_sequence_3.yaml.snap
---
source: src/composer/execute.rs
expression: results
input_file: src/composer/tests/submission_nested_sequence_3.yaml
---
[
  Config(
    action: "seele/noop@1",
    test: 1,
  ),
  Config(
    action: "seele/noop@1",
    test: 21,
  ),
  Config(
    action: "seele/noop@1",
    test: 22,
  ),
  Config(
    action: "seele/noop@1",
    test: 3,
  ),
  Config(
    action: "seele/noop@1",
    test: 4111111,
  ),
  Config(
    action: "seele/noop@1",
    test: 421,
  ),
  Config(
    action: "seele/noop@1",
    test: 422,
  ),
  Config(
    action: "seele/noop@1",
    test: 423,
  ),
  Config(
    action: "seele/noop@1",
    test: 431,
  ),
]
